// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cluster - order of sidebar items when rendered renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div
      class="SidebarCluster"
    >
      <div
        class="Avatar rounded loadingAvatar"
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div
        class="loadingClusterName"
      />
    </div>
    <div
      class="sidebarNav sidebar-active-status"
    >
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            />
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-config"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-some-parent-id"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-some-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            Some parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-storage"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-some-another-parent-id"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-another-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            Some another parent
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            />
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-user-management"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-custom-resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-some-other-parent-id"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-other-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            Some other parent
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;

exports[`cluster - order of sidebar items when rendered when parent is expanded renders 1`] = `
<div>
  <div
    class="flex flex-col"
    data-testid="cluster-sidebar"
  >
    <div
      class="SidebarCluster"
    >
      <div
        class="Avatar rounded loadingAvatar"
        style="width: 40px; height: 40px;"
      >
        ??
      </div>
      <div
        class="loadingClusterName"
      />
    </div>
    <div
      class="sidebarNav sidebar-active-status"
    >
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-workloads"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-workloads"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            />
          </i>
          <span
            class="link-text box grow"
          >
            Workloads
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-config"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-config"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="list"
            >
              list
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Config
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-some-parent-id"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-some-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            Some parent
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_up"
            >
              keyboard_arrow_up
            </span>
          </i>
        </a>
        <ul
          class="sub-menu"
        >
          <div
            class="SidebarItem"
            data-is-active-test="false"
            data-parent-id-test="some-parent-id"
            data-testid="sidebar-item-some-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Some child
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-is-active-test="false"
            data-parent-id-test="some-parent-id"
            data-testid="sidebar-item-some-another-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-another-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Some another child
              </span>
            </a>
          </div>
          <div
            class="SidebarItem"
            data-is-active-test="false"
            data-parent-id-test="some-parent-id"
            data-testid="sidebar-item-some-other-child-id"
          >
            <a
              class="nav-item flex gaps align-center"
              data-testid="sidebar-item-link-for-some-other-child-id"
              href="/"
            >
              <span
                class="link-text box grow"
              >
                Some other child
              </span>
            </a>
          </div>
        </ul>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-network"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-network"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="device_hub"
            >
              device_hub
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Network
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-storage"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-storage"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="storage"
            >
              storage
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Storage
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-some-another-parent-id"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-another-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            Some another parent
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-helm"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-helm"
          href="/"
        >
          <i
            class="Icon svg focusable"
          >
            <span
              class="icon"
            />
          </i>
          <span
            class="link-text box grow"
          >
            Helm
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-user-management"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-user-management"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="security"
            >
              security
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Access Control
          </span>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-custom-resources"
      >
        <a
          class="nav-item flex gaps align-center expandable"
          data-testid="sidebar-item-link-for-custom-resources"
          href="/"
        >
          <i
            class="Icon material focusable"
          >
            <span
              class="icon"
              data-icon-name="extension"
            >
              extension
            </span>
          </i>
          <span
            class="link-text box grow"
          >
            Custom Resources
          </span>
          <i
            class="Icon expand-icon box right material focusable"
          >
            <span
              class="icon"
              data-icon-name="keyboard_arrow_down"
            >
              keyboard_arrow_down
            </span>
          </i>
        </a>
      </div>
      <div
        class="SidebarItem"
        data-is-active-test="false"
        data-testid="sidebar-item-some-other-parent-id"
      >
        <a
          class="nav-item flex gaps align-center"
          data-testid="sidebar-item-link-for-some-other-parent-id"
          href="/"
        >
          <span
            class="link-text box grow"
          >
            Some other parent
          </span>
        </a>
      </div>
    </div>
  </div>
  <div
    class="Notifications flex column align-flex-end"
  />
</div>
`;
